<?xml version="1.0" encoding="utf-8"?>

<!--
     Brian Jackson
     bj1412@att.com
     8/7/2017
     Android Developer Nanodegree
     Project 3: Baking App

     File:  activity_main.xml
     -Parent activity displaying list of clickable recipes(title + thumbnail) users can choose to display details information.
     -Recipes are added to the list via RecyclerView.

     -The TextView and ProgressBar are initially set to invisible.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_recipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

        />

        <TextView
            android:id="@+id/tv_error_message_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/error_message"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_height="42dp"
            android:layout_width="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>
