...
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/checkbox_done"
        android:layout_toEndOf="@+id/checkbox_done" />
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/short_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="short_desc"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
...
