...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                     />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />



...
