...
        android:id="@+id/ll_step_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/step_header_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-bold"
            android:padding="10dp"
            android:text="steam_header_num"
            android:textSize="22sp"
...
